# QuantSim-Toolkit

./: .bandit.yaml  .bandit.yml  .gitignore  Makefile  README.md  main.py  mypy.ini  pyproject.toml  pytest.ini  setup_root.py
.devcontainer/: devcontainer.json
.github/workflows/: CI.yml  ci.yml  main.yml
config/: config_manager.py  settings.yaml
cpp/: CMakeLists.txt  pybind_module.cpp
cpp/include/quantsim/lob/: Order_book.hpp
cpp/src/lob/: order_book.cpp
db/: database.py  db_queries.py
scripts/: hydrate_db.py  seed_benchmark.py
src/: analysis_module.py  circuit_breaker.py  custom_errors.py  data_validator.py  flow_controller.py  implement_pybind.py  logging_config.py  main.py  quant_enums.py
src/adapters/: api_adapter.py
src/cli/: parser.py
src/cli/commands/: analyze.py  download.py  simulate.py  validate.py
src/data/: ITC_id.csv  NIFTY50_id.csv  RELIANCE_id.csv  TCS_id.csv
src/data_loader/: data_loader.py
src/modules/: probability.py  stock_data_downloader.py  stock_returns_analyzer.py
src/modules/analytics/: portfolio_analyzer.py  returns_analyzer.py
stubs/: quantsim_core_engine.pyi
tests/: conftest.py  helper_functions.py  test_db_local.py  test_market_data_production.py
