[project]
name = "quantsim-toolkit"
version = "0.1.0"
description = "A Python CLI-based quantitative simulation and analysis toolkit integrating probability simulations, stock return analysis, portfolio risk calculations, and Monte Carlo methods."
authors = ["Rohit Sarkar"]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "debugpy>=1.8.17",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]

[tool.uv]
python-preference = "only-managed"


[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

# This is crucial for uv — tells it where your source code lives.

# Optional but helpful for development
#[tool.uv.scripts]
#run-sim = "python -m src.main"
#test-db = "python -m tests.test_db_local"