[project]
name = "quantsim-toolkit"
version = "0.1.0"
description = "A Python CLI-based quantitative simulation and analysis toolkit integrating probability simulations, stock return analysis, portfolio risk calculations, and Monte Carlo methods."
authors = ["Rohit Sarkar"]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "bandit>=1.9.2",
    "debugpy>=1.8.17",
    "matplotlib>=3.10.6",
    "mypy>=1.18.2",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.2.250926",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "types-requests>=2.32.4.20250913",
]

[tool.uv]
python-preference = "only-managed"

[tool.mypy]
packages = ["src"]
exclude = [
    ".venv",
    "venv",
    "build",
    "dist"
]

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true


[dependency-groups]
dev = [
    "pytest>=8.4.2",
]


# Optional but helpful for development
#[tool.uv.scripts]
#run-sim = "python -m src.main"
#test-db = "python -m tests.test_db_local"